# StockTradebyZ

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SMART_BATCH_SYNC_GUIDE.md  SYNC_PERFORMANCE.md
.claude/: settings.local.json
.claude/plan/: 股票选股系统改造.md
.serena/: project.yml
backend/: .env.example  pyproject.toml  sina_page.html  test_imports.py  test_sync_modes.py  update_top_performer_table.py
backend/app/: __init__.py  cli.py  dependencies.py  main.py
backend/app/api/v1/: high_performance_sync.py  scheduled_tasks.py  stocks.py  strategies.py  sync.py  task_management.py  tasks.py
backend/app/core/: config.py  logging.py  scheduler.py  security.py  sync_config.py
backend/app/db/: init_db.py  session.py
backend/app/db/migrations/: __init__.py  add_top_performer_tasks.py
backend/app/models/: __init__.py  backtest.py  base.py  database.py  kline.py  scheduled_task.py  stock.py  strategy.py  top_performer.py
backend/app/schemas/: __init__.py  common.py  kline.py  stock.py  strategy.py  task.py
backend/app/services/: akshare_service.py  background_task.py  batch_sync_manager.py  eastmoney_service.py  github_backup_service.py  high_performance_sync.py  improved_task_queue.py  strategy_service.py  sync_manager.py  task_queue.py  top_performer_service.py
backend/app/utils/: indicators.py
backend/requirements/: base.txt  dev.txt  prod.txt
docs/: SCHEDULED_TASKS_GUIDE.md
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.vue  main.ts
(+25 files in other folders)
